# bugbounty-gpt

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  run-checks-and-tests.yml
alembic/: env.py
bugbounty_gpt/: __main__.py  env.py  start.sh
bugbounty_gpt/db/: db_handler.py  migrate.py  models.py
bugbounty_gpt/handlers/: bugcrowd_api.py  openai_handler.py  submission_handler.py
src/: main.py  start.sh
src/db/: db_handler.py  migrate.py  models.py
src/handlers/: bugcrowd_api.py  openai_handler.py  submission_handler.py
tests/: conftest.py  test_bugcrowd_api_client.py  test_comment_handling.py  test_config_validation.py  test_database_and_models.py  test_openai_classification.py  test_user_assignments.py
