[tool.poetry]
name = "bugbounty-gpt"
version = "0.1.0"
description = "A helpful gpt-based triage tool for BugCrowd bugbounty programs."

authors = ["Jake McNeil <mcneil@openai.com>"]

readme = "README.md"
packages = [
    {include = "bugbounty_gpt"},
]
include = ["bugbounty_gpt/CHANGELOG.md", "bugbounty_gpt/py.typed"]

[tool.poetry.dependencies]
python = "==3.8.*"
alembic = "1.12.1"
asyncpg = "0.28.0"
httpx = "0.25.0"
idna = "3.4"
iniconfig = "2.0.0"
Mako = "1.2.4"
MarkupSafe = "2.1.3"
multidict = "6.0.4"
openai = "0.28.1"
psycopg2-binary = "2.9.9"
SQLAlchemy = "2.0.22"
PyYAML = "6.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "^0.20.3"
mypy = "^1.2.0"
safety = "^2.0.0"
taskipy = "^1.6.0"
isort = "^5.7.0"
typer = "^0.6.0"
pytest-cov = "^2.11.1"
pytest-freezegun = "^0.4.2"
boto3-stubs = "^1.16.46"
ipython = "^7.21.0"
bandit = "^1.7.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
types-redis = "^3.5.9"
pylint = "^2.11.1"
autoflake = "^1.4"
Faker = "^9.2.0"
sqlalchemy-stubs = "^0.4"
black = "^23.10.1"

[tool.taskipy.tasks]
check = "task security && task style && task types && task lint && task lint_tests && task test"
lint = "pylint bugbounty_gpt"
lint_tests = "pylint --disable=\"R0201,W0201,W0212,W0621,W0404,C0302\" tests"
code_safety = "bandit -r -q bugbounty_gpt -c pyproject.toml"
# Security item #42194 is related to encrypted values in sqlalchemy-utils, which we don't use
security = """
poetry export -f requirements.txt | poetry run safety check --bare --stdin -i 42194 -i 51668\
&& task code_safety
"""
style = """
autoflake -i -r --expand-star-imports --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports bugbounty_gpt tests \
&& isort . \
&& black .
"""
test = "pytest --cov=bugbounty_gpt --cov-report term-missing"
types = "mypy bugbounty_gpt"


[tool.bandit]
#skips = ["B101"]

[tool.black]
line-length = 120
target_version = ['py310']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
skip = ".serverless,.venv,node_modules"
profile = "black"

[tool.pylint.BASIC]
bad-names = ["foo", "bar", "baz", "quux", "toto", "tutu", "tata"]
good-names = ["e", "i", "j", "pk", "T"]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.MASTER]
ignore = ".git"
jobs = 0

[tool.pylint."MESSAGES CONTROL"]
# C0114 == missing module docstring
# C0115 == missing class docstring
# C0116 == missing function/method docstring
# C0121 == comparison checking for singleton value True
#       Ignored because SQLAlchemy requires `thing != True` instead of
#       `thing is not True` or `not thing`
# C0301 == line too long (covered by flake8)
# C0413 == wrong import position -- let isort fix
# C0415 == import outside toplevel
# E0401 == Import error -- let mypy handle
# E0602 == Undefined variable -- let mypy handle
# E0611 == No name in module -- let mypy handle
# E1101 == No member -- let mypy handle
# E1120 == No value for parameter -- let mypy handle it
# E1125 == Missing kwoa -- let mypy handle
# E1136 == Value is unsubscriptable (covered by mypy)
# R0801 == Duplicated code
# R0903 == Too few public methods
# R1705 == no "elif"/"else" after return statement (Dylan disapproves)
# R1720 == no "elif"/"else" after raise statement (consistency with R1705)
# W0143 == comparing against a callable (may conflict with SQLA)
# W0221 == Parameters differ from overridden method (let mypy handle)
# W0401 == Wildcard import
# W0611 == unused import -- disabled to let autoflake handle
# W0614 == Unused wildcard imports -- used for reexporting
# W1203 == "Use lazy % formatting in logging functions"
#       See https://github.com/PyCQA/pylint/issues/2354#issuecomment-414526879
disable = [
    "C0114", "C0115", "C0116", "C0121", "C0301", "C0413", "C0415",
    "E0012", "E0602", "E0611", "E1101", "E1120", "E1125", "E1136", "E0401",
    "R0801", "R0903", "R1705", "R1720",
    "W0143", "W0221", "W0401", "W0611", "W0614", "W1203",
    # Temporarily disabled to focus on other things
    "R0901", "R0902", "R0904", "R0911", "R0912", "R0913", "R0914", "R0915", "W0511",
    # Circular dependencies - WAY too many false positives, is caught by tests/QA anyways
    "R0401"
]

[tool.pylint.variables]
dummy-variables = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = "(_.*|^ignored_.+|^unused_.+|^mock_.+|^setup_database$|^freezer$)"
